# RED

./: .gitignore  ADMIN_MANUAL.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile.node  Dockerfile.signaling  GETTING_STARTED.md  README.md  USER_MANUAL.md  build_and_screen.bat  build_android.ps1  cargo_check_final.txt  err.txt  logcat.txt  logcat_startup.txt  logcat_utf8.txt  task.md
.cargo/: config.toml
bindings/javascript/: package.json
bindings/python/: setup.py
blockchain/: Cargo.toml
blockchain/src/: block.rs  chain.rs  consensus.rs  lib.rs  serde_utils.rs  store.rs  transaction.rs
client/: Cargo.toml
client/app/: .aiexclude  capacitor.config.ts  next.config.ts  package-lock.json  package.json
client/app/android/: .aiexclude  build.gradle  build_log.txt  capacitor.settings.gradle  gradle.properties  variables.gradle
client/app/android/app/: build.gradle  capacitor.build.gradle  proguard-rules.pro
client/app/android/app/release/: output-metadata.json
client/app/android/app/release/baselineProfiles/0/: app-release.dm
client/app/android/app/release/baselineProfiles/1/: app-release.dm
client/app/android/app/src/androidTest/java/com/getcapacitor/myapp/: ExampleInstrumentedTest.java
client/app/android/app/src/main/: AndroidManifest.xml  new.sh
client/app/android/app/src/main/java/f/red/app/: MainActivity.java  RedDisguisePlugin.java  RedNodePlugin.java  RedNodeService.java
client/app/android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
client/app/android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
client/app/android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
client/app/ios/App/App/: Info.plist
client/app/ios/App/App.xcodeproj/: project.pbxproj
client/app/ios/App/CapApp-SPM/: Package.swift
client/app/public/: sw.js
client/app/src/app/: components.css  globals.css  layout.tsx  page.tsx
client/app/src/app/broadcast/: page.tsx
client/app/src/app/calls/: page.tsx
client/app/src/app/chat/: page.tsx
client/app/src/app/contactprofile/: page.tsx
client/app/src/app/contactqr/: page.tsx
client/app/src/app/contacts/: page.tsx
client/app/src/app/contactsync/: page.tsx
client/app/src/app/crypto/: page.tsx
client/app/src/app/export/: page.tsx
client/app/src/app/groupadmin/: page.tsx
client/app/src/app/multidevice/: page.tsx
client/app/src/app/nodemap/: page.tsx
client/app/src/app/offline/: page.tsx
client/app/src/app/profile/: page.tsx
client/app/src/app/settings/: page.tsx
client/app/src/app/starred/: page.tsx
client/app/src/app/stats/: page.tsx
client/app/src/app/status/: page.tsx
client/app/src/components/: AuthWall.tsx  BlockchainDashboard.tsx  BlockchainExplorer.tsx  BroadcastPanel.tsx  CalculatorScreen.tsx  CallScreen.tsx  ChatLabels.tsx  ChatNotifSettings.tsx  ChatWindow.tsx  CryptoPanel.tsx  ErrorBoundary.tsx  GroupsPanel.tsx  LinkPreview.tsx  LocationMapView.tsx  LocationTracker.tsx  Logo.tsx  MessageSearch.tsx  NearbyDevicesPanel.tsx  NetworkPanel.tsx  NodeMap.tsx  OfflineIndicator.tsx  Onboarding.tsx  OnboardingProfile.tsx  PanicScreen.tsx  PollComponents.tsx  RadarWindow.tsx  SecurityHUD.tsx  SecurityPanel.tsx  Sidebar.tsx  SplashScreen.tsx  StatusHeader.tsx  StatusView.tsx  Toast.tsx  WallpaperPicker.tsx
client/app/src/lib/: api.ts  bluetoothTransport.ts  localTransport.ts  meshProtocol.ts  native.ts  signalingClient.ts  wifiDirectTransport.ts
client/app/src/lib/mesh/: bluetoothTransport.ts  localTransport.ts  wifiDirectTransport.ts
client/app/src/plugins/: RedNode.ts
client/app/src/store/: useRedStore.ts
client/src/: main.rs
core/: Cargo.toml  check.bat  err.txt
core/src/: ffi.rs  lib.rs
core/src/crypto/: encryption.rs  hashing.rs  keys.rs  mod.rs  ratchet.rs  zk_proofs.rs
core/src/identity/: identity.rs  mod.rs  registry.rs
core/src/network/: config.rs  control.rs  dummy_traffic.rs  gossip.rs  libp2p_transport.rs  lora_bridge.rs  mod.rs  node.rs  onion.rs  peer.rs  routing.rs  transport.rs
core/src/protocol/: conversation.rs  group.rs  message.rs  mod.rs
core/src/storage/: encrypted_store.rs  mod.rs
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  FAQ.md  GLOSSARY.md  MATHEMATICAL_SPECIFICATION.md  MOBILE_TESTING.md  OFFLINE_CONNECTIVITY.md  PLAYSTORE_GUIDE.md  PRIVACY.md  PROTOCOL_SPECIFICATION.md  QUICKSTART.md  SECURITY_AUDIT.md  SPECIFICATION.md  TERMS.md  test_vectors.json
examples/: basic_messaging.rs  network_demo.rs
node/: Cargo.toml
node/src/: api.rs  auth.rs  main.rs  rate_limit.rs
node/src/web/: app.css  app.js  index.html
prometheus-client-fix/: Cargo.toml
proofs/: README.md  anonymity_proof.pv  security_model.pv  security_proofs.tex
red_mobile/: Cargo.toml  err.txt
red_mobile/.cargo/: config.toml
red_mobile/src/: api.rs  lib.rs
signaling/: .env.example  SIGNALING.md  package-lock.json  package.json  server.js
specs/: omega_protocol.tla
tests/: crypto_tests.rs  integration_tests.rs
website/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._tree.txt  _not-found.txt  broadcast.html  calls.html  chat.html  contactprofile.html  contactqr.html  contacts.html  contacts.txt  contactsync.html  contactsync.txt  crypto.html  crypto.txt  export.html  export.txt  groupadmin.html  groupadmin.txt  index.html  multidevice.html  multidevice.txt  nodemap.html  nodemap.txt  offline.html  offline.txt  package-lock.json  package.json  profile.html  profile.txt  script.js  settings.html  settings.txt  starred.html  starred.txt  stats.html  status.html  status.txt  styles.css
website/_not-found/: __next._head.txt  __next._tree.txt
website/broadcast/: __next._full.txt  __next._tree.txt
website/calls/: __next._full.txt  __next._tree.txt
website/chat/: __next._full.txt  __next._tree.txt
website/contactprofile/: __next._full.txt  __next._tree.txt
website/contactqr/: __next._full.txt  __next._tree.txt
website/contacts/: __next._tree.txt
website/contactsync/: __next._head.txt  __next._index.txt  __next._tree.txt
(+65 files in other folders)
