[package]
name = "red-blockchain"
version = "0.1.0"
edition = "2021"
authors = ["RED Team"]
description = "Blockchain for RED identity management"
license = "AGPL-3.0"

[lib]
name = "red_blockchain"
path = "src/lib.rs"

[dependencies]
# Core
red-core = { path = "../core" }

# Cryptography
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
blake3 = "1.5"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Storage
rocksdb = "0.21"

# Utilities
thiserror = "1.0"
tracing = "0.1"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
