[package]
name = "red-cli"
version = "0.1.0"
edition = "2021"
authors = ["RED Team"]
description = "RED command-line client"
license = "AGPL-3.0"

[[bin]]
name = "red"
path = "src/main.rs"

[dependencies]
# Core libraries
red-core = { path = "../core" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
rustyline = "13.0"
colored = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
toml = "0.8"
dirs = "5.0"

# Utilities
anyhow = "1.0"
chrono = "0.4"
bincode = "1.3"
hex = "0.4"
