[package]
name = "red-core"
version = "0.1.0"
edition = "2021"
authors = ["RED Team"]
description = "Core library for RED - Decentralized Encrypted Network"
license = "AGPL-3.0"
repository = "https://github.com/red-network/red"
keywords = ["privacy", "messaging", "p2p", "encryption", "blockchain"]
categories = ["cryptography", "network-programming"]

[lib]
name = "red_core"
path = "src/lib.rs"

[dependencies]
# Cryptography
x25519-dalek = "2.0"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
chacha20poly1305 = "0.10"
blake3 = "1.5"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# P2P Networking
libp2p = { version = "0.53", features = [
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "identify",
    "ping",
    "tokio",
    "macros",
] }

# Utilities
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"

[features]
default = []
test-utils = []
