[package]
name = "red-node"
version = "0.1.0"
edition = "2021"
authors = ["RED Team"]
description = "RED network node"
license = "AGPL-3.0"

[[bin]]
name = "red-node"
path = "src/main.rs"

[dependencies]
# Core libraries
red-core = { path = "../core" }
red-blockchain = { path = "../blockchain" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP REST API
axum = { version = "0.7", features = ["http1", "json"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"
dirs = "5.0"

# Utilities
anyhow = "1.0"
bincode = "1.3"

# Cryptography (for signing key)
ed25519-dalek = "2.0"

# Secure password input
rpassword = "7.0"

# Async stream for SSE
async-stream = "0.3"
futures = "0.3"
hex = "0.4"
